# ChangeLog for app-crypt/gnupg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.548 2014/09/14 09:17:39 maekke Exp $

  14 Sep 2014; Markus Meier <maekke@gentoo.org> gnupg-2.0.26.ebuild:
  arm stable, bug #521174

  14 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26.ebuild:
  Stable for ppc64, wrt bug #521174

  07 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26.ebuild:
  Stable for ppc, wrt bug #521174

  29 Aug 2014; Alon Bar-Lev <alonbl@gentoo.org> gnupg-2.0.26-r1.ebuild,
  gnupg-2.1.0_beta783.ebuild:
  Remove adns USE, bug#513990

*gnupg-2.0.26-r1 (29 Aug 2014)

  29 Aug 2014; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-2.0.26-r1.ebuild:
  Remove adns USE, bug#513990

  29 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> gnupg-2.0.26.ebuild:
  alpha stable wrt bug #521174

  29 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> gnupg-2.0.26.ebuild:
  x86 stable wrt bug #521174

  29 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> gnupg-2.0.26.ebuild:
  amd64 stable wrt bug #521174

  28 Aug 2014; Jeroen Roovers <jer@gentoo.org> gnupg-2.0.26.ebuild:
  Stable for HPPA (bug #521174).

*gnupg-2.1.0_beta783 (18 Aug 2014)

  18 Aug 2014; Kristian Fiskerstrand <k_f@gentoo.org>
  +gnupg-2.1.0_beta783.ebuild, -gnupg-2.1.0_beta751.ebuild:
  Bump 2.1 version to beta783. Fix bug #519200

*gnupg-2.0.26 (13 Aug 2014)

  13 Aug 2014; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/gnupg-2.0.26-Need-to-init-the-trustdb-for-import.patch,
  +gnupg-2.0.26.ebuild:
  Version bump to 2.0.26. Add patch to fix an import issue for trust-
  model=always (bug #519760)

  30 Jul 2014; Kristian Fiskerstrand <k_f@gentoo.org> metadata.xml:
  Update metadata longdesc to reflect IDEA is now also part of GnuPG and the
  OpenPGP specs have been amended in RFC4880

  25 Jul 2014; Jason A. Donenfeld <zx2c4@gentoo.org> gnupg-2.1.0_beta751.ebuild:
  It's not in the mirrors yet.

*gnupg-2.1.0_beta751 (25 Jul 2014)