@@ -9,15 +9,15 @@ DIST gnupg-2.0.26.tar.bz2 4303384 SHA256 7758e30dc382ae7a7167ed41b7f936aa50af5ea
 DIST gnupg-2.1.0-beta783.tar.bz2 3095003 SHA256 b2bab71204fead83d07790c4f35743a0a464d1d3368a923affc766188097aca1 SHA512 c299195390f2cd6ec85944113f18e8a6987926ccb98d94eb6cf61bdf47548d64faf2a96f751d6a41432c7e72ce65c26ab9ce9fc8fe320c0e96c4159a94cb9e82 WHIRLPOOL e7992174cfae8cbd08d96e57132a38705eca71fed4231ad63f744b186c326276c1a298fc65e971a743f383cab4939944a5b4bbc857e2f3c8210dd6e50085054d
 EBUILD gnupg-1.4.18.ebuild 3763 SHA256 37cedb3946b555e83111f5096b3dd73f9506175976be10d648f8eb76b0b5fd3a SHA512 3dd165eb15a4946a9e2157549f0da6864e84c054a6369d7053730a899b50c5f05a703c1ce8e208b9de21b135bc8888f0f13835fce50f0e9eec467140e7e63355 WHIRLPOOL 9c64d59b7c444dde1fb601a6ab8d1085525153174b5995009ff7758866e56b88028056b42154fa0e28b3328978e15df515e4c65e65cb667fc17b75fb340e8e15
 EBUILD gnupg-2.0.25.ebuild 4747 SHA256 6c57559a986cb9271891d041a6f1e7903ccce835c00d7ea16818078f56f11d78 SHA512 f3d81564eb1c708d188d357521f3c6c43f15a8ac8f2758d14328cc3d7cc40306af50a8269f09dd2f80ec6469dc5f31dd2864008d7526dd9f108b1972ce1a7000 WHIRLPOOL f41c54bef5b0b4b7a7cba514c4c39d2cc938eae5e56c8a225755435393f4e483e5c1bd02d02dd0c86c9d6a945ccfe40090523b7f35228a899043dfa79eff9ba1
-EBUILD gnupg-2.0.26-r1.ebuild 4791 SHA256 f1e5c4cabee214249427583f8d8e50ce0027989d367eb1fc50413c29e07f47d0 SHA512 f371719e5bc58f91284f294a63fe07287ce72f1a9899ff6516089d161f96d3382d9de58130b36d12f98a975e4f8c5a69ef2dc99d1866db9c9b375b405ed41496 WHIRLPOOL 475104675f161ed387c3be5fcdc8ff03e3dfec99dfe120bfbc13a3cba62acd4993d3aa66d2f589158520f86be96fd955876426609dddbcb572bb3133bef90cd6
+EBUILD gnupg-2.0.26-r2.ebuild 4983 SHA256 8dde2b098b307cd38a803228718c615cf530a61141ac138e4a435f6be0248832 SHA512 53e3e3c6576f804cb94c655887bcd14f9794ea0b788f542a2300694c1e0ee87dcba7430241148bc7e776f3c813a17673e6e41928c037bc6acaf14b3bcebca809 WHIRLPOOL 3589556496eac742c02c3e35519991ae430dea02f5c436b5d8a7938b49af8407147c5ea6670d04dec2ca19ecce843fe9a70b1358788c128619038f3909cb41f0
 EBUILD gnupg-2.0.26.ebuild 4819 SHA256 16fe4456579aecbed5e02958d3d08c23405bc8c34af9bc6612e4245ac3edbc6f SHA512 30699c96d40726a41a9f63f309338e9035a1a765f580c75a452a8ab3ea835d800bea8cc1009aaa31dac119e79249b9747ab69003af21a23223c02b7917f66ee4 WHIRLPOOL 45916e303e27f0a9fd0fb336a130ec0d57a59b884970989eb60c925df5d9ab57a26196cef41e2148458ddc30d1ee8958f3c4c92fc10a791d303d91610ea8cb36
-EBUILD gnupg-2.1.0_beta783.ebuild 4309 SHA256 2d1e455aa22d65af738186770971797784eb324efc85e2225af81f63e09c6917 SHA512 92c1f051df0deb2fda470c89071d49c7a53e4c6ae13881140210ae3b19d716839ecd1d10a996bf1b607383233b7ec01c35a270bc4b6a903c135375e601502f84 WHIRLPOOL 8924c6537d676fd35b71571b4fa31905c178a67ced07d538391c0f9dedbf6abab95bdbee9bbc9df5d1e31e093d9a83eca1ef01c98d78a0033bac7318e92c3779
-MISC ChangeLog 80134 SHA256 ef9577c7a1dbe5ee1c7427816f2dafd6c212b6064027f26818df8de874a31d58 SHA512 3f615c992c3983f93f03d30829e038147b9bb1f6633ff75363e589dc05013207ecc3e3853cbec6b93dc06bd67de1b55d36667a9c11e85e457cc706da67d6c5d6 WHIRLPOOL fda877698e95b503a358d80f82952bbe8a072e3f9c3f2e9b29fb925c449b784e145e478424c22936306ede909baa95e814f76d40856d81344283f341f0310889
-MISC metadata.xml 969 SHA256 969b10a1be20daa309d3e392d005a9b1325e7e1a5bf638ae7a9151c625e79d66 SHA512 8cfc927b9df66c91a16e1d54091d36c4610575f7cbc45732dd2d7ce943859b6ec1afd7b25effb16da61d5ad2df7958daf4769fdcef4f137ceaf5112b24a78793 WHIRLPOOL a043979724cc3f4a5cf869459d60998948ed9018666824c2941a21823c3ce03a3012006767951300bdf346582f3aa6f9c035bfa0c607363eb8ef35713cd18254
+EBUILD gnupg-2.1.0_beta783.ebuild 4501 SHA256 2fb759a7c6b1742913b1eb0000fe48aa80118b9eee35b7411e6a8425195e99d4 SHA512 9160ca00583d430ebf9348e191a9207709752ee4115fe2a063bc7671ea3174803d7b136d35295797c63ca01028582e03cc779ad85f1b5d44151b4e3859450efa WHIRLPOOL c61bd28b6a3eb6613511c6b9aa15b469dbb59561a528c8107aeddf7f2df0cfb5e986d646cd04fdfac13bd4c05e07607cdbfd557356a6d79cf11692399934f980
+MISC ChangeLog 80402 SHA256 12930ce1fa048be24157d0cf47a95867840c64fa8afd549ef56f2d28b92da49b SHA512 30b762943e067a594648cfb02b52f5769c0bfbeb394171217220cca30e46af84cb28a56401a84993a9acdf844f9ee07c7934adf9623884dde18f6dee92e0ad88 WHIRLPOOL 59f8f16987a7ded44f3acc8ac9c8a2f8015f1e64b36f2a64302daa967a228a73129d57c333edf1c622c8f2abb66a3524c12191642f47eb032285884615d64853
+MISC metadata.xml 1032 SHA256 cbef1621eb1364c8d12ac18e71cf4aabfced9ecd3c990a3f3cdf066902dc97bb SHA512 5e2ef4380effe027a0b0b8a11a29ed1996b3b5256ee333909d4a7cfcb18ea1e9dead9b8303c7dffc1ad10014dea79e827b1d84caa92294f4d3dfc29ff23a6af5 WHIRLPOOL a24c7f71ed140f34dd59b10314869d0c5482063be20faefa1591595feb856c79bc57a6b344dd467875cf3389d8cd14e2d41f2312f51d3b77dcbe27af97b7f129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQVXTUACgkQkKaRLQcq0GJNJwCfXDE7eDBA0GyfTj8wy0dkKzY3
-ySoAnjk9UwFr4WeMNokAL6NP+IbmIvp7
-=HQXA
+iF4EAREIAAYFAlQXHrAACgkQXYk9GL8g3FGDYwD/RGf8ne09ZPJOgwrKnw+UZDH5
+fst4VjqrkDTw14nsWYcA/0qe5feFsXyxvHfXeC1AK4bSmUNEUnDMXxc+AjEV75jn
+=X/br
 -----END PGP SIGNATURE-----
